--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "keywords": ["paypal", "php", "sdk"],
     "homepage": "https://developer.paypal.com",
     "license": "Apache-2.0",
+    "minimum-stability": "dev",
     "authors": [
         {
             "name": "PayPal",
